# xml-_by_Michael-Chourdakis-CodeProject

./: .gitignore  .gitmodules  README.md  xml3all.h
include/: xml3all.h
test/: CMakeLists.txt  test_main.cpp  test_xml.cpp  test_xml.h
